--- a/06-node/MoreExpress/views/love.ejs
+++ b/06-node/MoreExpress/views/love.ejs
@@ -1,3 +1,9 @@
 <h1>You fell in love with: <%= thingVar %></h1>
 
+<% if (thingVar.toLowerCase() === 'rusty') { %>
+  <p> Good choice! Rusty is the best!</p>
+<% } else { %>
+  <p>Bad choise! You should have said Rusty!</p>
+<% } %>
+
 <p>P.S. this is the love.ejs file!</p>
