Serving Custom Assets

--- a/06-node/MoreExpress/views/home.ejs
+++ b/06-node/MoreExpress/views/home.ejs
@@ -1,3 +1,7 @@
+<% include partials/header %>
+
 <h1>This is the home page!</h1>
 
 <img src="https://gestoranimal.com.br/img-up/belo-filhote-de-pomsky.jpg">
+
+<% include partials/footer %>
