YelpCamp: Creating Campgrounds

--- a/YeldCamp/views/partials/footer.ejs
+++ b/YeldCamp/views/partials/footer.ejs
@@ -1,3 +1,5 @@
-  <small>TradeMark YelpCamp <%= new Date().getFullYear() %></small>
+  <footer>
+    <small>TradeMark YelpCamp <%= new Date().getFullYear() %></small>
+  </footer>
 </body>
 </html>
