--- a/YeldCamp/views/new.ejs
+++ b/YeldCamp/views/new.ejs
@@ -1,13 +1,25 @@
 <% include partials/header %>
 
-<h1>Create a new Campground</h1>
+<div class="container">
+  <h1 class="text-center mb-4">Create a new Campground</h1>
 
-<form action="/campgrounds" method="POST">
-  <input name="name" type="text" placeholder="name">
-  <input name="image" type="text" placeholder="image url">
-  <button type="submit">Submit</button>
-</form>
+  <div class="row justify-content-center">
+    <div class="col-md-4 col">
+      <form action="/campgrounds" method="POST">
+        <div class="form-group">
+          <input class="form-control" name="name" type="text" placeholder="name">
+        </div>
+        <div class="form-group">
+          <input class="form-control" name="image" type="text" placeholder="image url">
+        </div>
+        <div class="form-group">
+          <button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
+        </div>
+      </form>
 
-<a href="/campgrounds">Go back</a>
+      <a href="/campgrounds">Go back</a>
+    </div>
+  </div>
+</div>
 
 <% include partials/footer %>
